--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -6,23 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <title>コロナウィルス</title>
-  <link rel="stylesheet" href="css/magnific-popup.css">
-<script src="js/jquery.magnific-popup.min.js"></script>
-<script>
-  $(document).ready(function() {
-   $('.popup-youtube').magnificPopup({
-    disableOn: 700,
-    type: 'iframe',
-    mainClass: 'mfp-fade',
-    removalDelay: 160,
-    preloader: false
-   });
-});
-</script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <!--自作CSS -->
 <style type="text/css"><!--
   /*ここに調整CSS記述*/
-  .jumbotron { background:url(dontstop.png) center no-repeat; background-size: cover; height:300px;}
+  .jumbotron { background:url(dontstop.png) center no-repeat; background-size: cover; height:350px;}
   -->
   .btn-primary{
     position: absolute;
@@ -36,38 +26,6 @@
   font-weight: bold; /*太字に*/
   font-size: 3em;/*サイズ2倍*/
   }
-
-.example img {
-  width: 100%;
-  }
-  /**
- * Simple fade transition,
- */
-.mfp-fade.mfp-bg {
-    opacity: 0;
-    -webkit-transition: all 0.15s ease-out; 
-    -moz-transition: all 0.15s ease-out; 
-    transition: all 0.15s ease-out;
-}
-.mfp-fade.mfp-bg.mfp-ready {
-    opacity: 0.8;
-}
-.mfp-fade.mfp-bg.mfp-removing {
-    opacity: 0;
-}
-
-.mfp-fade.mfp-wrap .mfp-content {
-    opacity: 0;
-    -webkit-transition: all 0.15s ease-out; 
-    -moz-transition: all 0.15s ease-out; 
-    transition: all 0.15s ease-out;
-}
-.mfp-fade.mfp-wrap.mfp-ready .mfp-content {
-    opacity: 1;
-}
-.mfp-fade.mfp-wrap.mfp-removing .mfp-content {
-    opacity: 0;
-}
 　</style>
 </head>
 
@@ -120,8 +78,6 @@
     </div>
   </div>
 
-  <a class="popup-youtube" href="https://www.youtube.com/watch?v=BiGWVklFFDw">Open YouTube video</a>
-
   　<div class="container">
     <table class="table table-striped">
       <div class="mt-5"></div>
@@ -130,37 +86,39 @@
       <tr><td>大阪</td><td>50</td></tr>
       <tr><td>愛知</td><td>30</td></tr>
     </table>
-  </div>
+  </div> 
 
-   <div class="container">
-    <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal1">
-  youtube
-</button>
-<div class="modal fade" id="modal1" tabindex="-1"
-      role="dialog" aria-labelledby="label1" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-  　<div class="modal-content">
-      <a href="https://www.youtube.com/watch?v=oA99TQGtSd0">Open YouTube video</a>
-      <div class="modal-header">
-        <h5 class="modal-title" id="label1">世界のコロナ情報</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        ロシア首相が感染
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-info">OK</button>
+  <div class="container">
+  <div class="button">
+  <button type="button" class="btn btn-info btn-lg btn-block mr-50 ml-50 video" data-video="https://www.youtube.com/embed/b4DeMn_TtF4" data-toggle="modal" data-target="#videoModal">
+    うちで踊ろう
+  </button>
+  
+  <div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-body">
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe width="100%" height="500" src="" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
       </div>
     </div>
+    </div>
+    </div>
   </div>
-</div>
-   </div>
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-</body>
-
-</html>
+  <script>
+  $(function() {
+  $(".video").click(function () {
+    var theModal = $(this).data("target"),
+    videoSRC = $(this).attr("data-video"),
+    videoSRCauto = videoSRC + "?modestbranding=1&rel=0&controls=0&showinfo=0&html5=1&autoplay=1";
+    $(theModal + ' iframe').attr('src', videoSRCauto);
+    $(theModal + ' button.close').click(function () {
+      $(theModal + ' iframe').attr('src', '');
+    });
+  });
+});
+  </script>
+  </body>
+ </html>
