--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -16,13 +16,14 @@
   -->
   .btn-primary{
     position: absolute;
-    top: 250px;
+    top: 300px;
+    left: 75px;
   }
-  .messege {
+  .example {
   position: absolute;/*絶対配置*/
   color: yellow;/*文字は白に*/
-  top: 100px;
-  right: 30px;
+  top: 300px;
+  right: 80px;
   font-weight: bold; /*太字に*/
   font-size: 3em;/*サイズ2倍*/
   }
@@ -30,8 +31,9 @@
 </head>
 
 <body style="container">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">News of the CORONA</a>
+  <nav class="navbar navbar-expand-lg navbar-light bg-info">
+  <a class="navbar-brand" href="https://www.who.int/">News of the CORONA</a>
+  <img src="dontstop.png" width="30" height="30" class="d-inline-block align-top" alt="dontstop">
   <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="ナビゲーションの切替">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -51,10 +53,10 @@
 </nav>
 
   <div class="jumbotron">
-    <div class="container">
-      <div class="messege">
+  　<div class="container">
+      <div class="example">
         <p>コロナに負けるな！</p>	
-      </div>
+        </div>
       <a href="https://corona.go.jp/" class="btn btn-primary">最新情報</a>
     </div><!-- /.container -->
   </div><!-- /.jumbotron -->
