--- a/bootstrap/contacto.html
+++ b/bootstrap/contacto.html
@@ -12,14 +12,18 @@
         }
         .container{
             position: relative;
-            margin-top: 60;
+            margin-top: 40;
+            margin-bottom: 70;
             background-color: powderblue;
         }
     </style>
 </head>
 <body>
     <div class="content">
-    <h1>Thank you for your inquiry</h1>
+    <img src="netflix.jpg" width="80" height="80" class="logo" alt="画像">
+    <h1>contacto</h1>
+    <p>製品・サービスに関するお問い合わせを承っております。<br>下記入力フォームをご記入の上、「送信」ボタンを押して下さい。<br>
+        お客様から多く寄せられているお問合せの中からよくあるご質問を掲載しています。<br>こちらもご覧ください。https:</p>
     <div class="container">
     <form action="confirm.php" method="post" name="Form1">
         <div class="form-group">
@@ -56,6 +60,18 @@
     </div>
     </div>
     </form>
+
+        <!-- Footer -->
+<footer class="page-footer font-small blue">
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2020 Copyright:
+      <a href="http://nishimuramasaya.com"> nishimuramasaya.com</a>
+    </div>
+    <!-- Copyright -->
+  
+  </footer>
+  <!-- Footer -->
 
 <!-- 件名その他を押したときだけテキストボックスをONにする -->
 <script type="text/javascript">
