--- a/bootstrap/contacto.html
+++ b/bootstrap/contacto.html
@@ -5,7 +5,7 @@
     <title>contacto us</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="./jquery-3.5.0.min.js"></script>
-    <style>
+      <style>
         .content{
             text-align: center;
             margin-top: 30;
@@ -20,7 +20,7 @@
 </head>
 <body>
     <div class="content">
-    <img src="netflix.jpg" width="80" height="80" class="logo" alt="画像">
+    <img src="./img/netflix.jpg" width="80" height="80" class="logo" alt="画像">
     <h1>contact</h1>
     <p>製品・サービスに関するお問い合わせを承っております。<br>下記入力フォームをご記入の上、「送信」ボタンを押して下さい。<br>
         お客様から多く寄せられているお問合せの中からよくあるご質問を掲載しています。<br>こちらもご覧ください。https:</p>
