--- a/bootstrap/form.html
+++ b/bootstrap/form.html
@@ -52,10 +52,9 @@ body {
 }
   </style>
 </head>
-
 <body class="text-center">
   <form class="form-signin">
-    <img src="dontstop.png" width="80" height="80" class="logo" alt="画像">
+    <img src="./img/dontstop.png" width="80" height="80" class="logo" alt="画像">
     <h1 class="h3 mb-4 mt-3 font-weight-normal">サインインをどうぞ</h1>
     <label for="inputEmail" class="sr-only">Emailアドレス</label>
     <input type="email" id="inputEmail" class="form-control" placeholder="Emailアドレス" required autofocus>
